lists/failed/MANOR
+ Rscript -e 'Sys.setenv(BIOCONDUCTOR_USE_CONTAINER_REPOSITORY=FALSE); p <- .libPaths(); p <- c('\''/tmp/tmp/built'\'', p); .libPaths(p); if(BiocManager::install('\''MANOR'\'', INSTALL_opts = '\''--build'\'', update = TRUE, quiet = FALSE, dependencies=TRUE, force = TRUE, keep_outputs = TRUE) %in% rownames(installed.packages())) q(status = 0) else q(status = 1)'
'getOption("repos")' replaces Bioconductor standard repositories, see
'help("repositories", package = "BiocManager")' for details.
Replacement repositories:
    CRAN: https://cloud.r-project.org
Bioconductor version 3.19 (BiocManager 1.30.22), R Under development (unstable)
  (2024-01-23 r85822)
Installing package(s) 'MANOR'
also installing the dependency ‘bookdown’

trying URL 'https://cloud.r-project.org/src/contrib/bookdown_0.37.tar.gz'
Content type 'application/x-gzip' length 858915 bytes (838 KB)
==================================================
downloaded 838 KB

trying URL 'https://bioconductor.org/packages/3.19/bioc/src/contrib/MANOR_1.75.0.tar.gz'
Content type 'application/x-gzip' length 1493187 bytes (1.4 MB)
==================================================
downloaded 1.4 MB

* installing *source* package ‘bookdown’ ...
** package ‘bookdown’ successfully unpacked and MD5 sums checked
** using staged installation
** R
** inst
** byte-compile and prepare package for lazy loading
** help
*** installing help indices
*** copying figures
** building package indices
** installing vignettes
** testing if installed package can be loaded from temporary location
** testing if installed package can be loaded from final location
** testing if installed package keeps a record of temporary installation path
* creating tarball
packaged installation of ‘bookdown’ as ‘bookdown_0.37_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (bookdown)
* installing *source* package ‘MANOR’ ...
** using staged installation
** libs
using C compiler: ‘gcc (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0’
gcc -I"/usr/local/lib/R/include" -DNDEBUG   -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c Rnem_arg.c -o Rnem_arg.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG   -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c Rnem_exe.c -o Rnem_exe.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG   -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c exememo.c -o exememo.o
exememo.c: In function ‘GenAlloc’:
exememo.c:43:7: error: format not a string literal and no format arguments [-Werror=format-security]
   43 |       error(msg);
      |       ^~~~~
cc1: some warnings being treated as errors
make: *** [/usr/local/lib/R/etc/Makeconf:191: exememo.o] Error 1
ERROR: compilation failed for package ‘MANOR’
* removing ‘/tmp/tmp/built/MANOR’

The downloaded source packages are in
	‘/tmp/RtmpfUfsmT/downloaded_packages’
Old packages: 'commonmark', 'httpuv', 'zip'
Warning message:
In install.packages(...) :
  installation of package ‘MANOR’ had non-zero exit status

real	0m6.746s
user	0m4.368s
sys	0m1.310s
